--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueform/slider": "^2.1.7",
     "@yeger/vue-masonry-wall": "^3.4.4",
     "bootstrap": "^5.2.3",
+    "jdenticon": "^3.3.0",
     "pinia": "^2.0.32",
     "sass": "^1.58.3",
     "vee-validate": "^4.7.4",
